--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-router/serve": "^7.5.2",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "i18next": "^25.1.2",
     "isbot": "^5.1.17",
     "loglevel": "^1.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router": "^7.5.2",
     "zod": "^3.24.4"
   },
