--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-router/serve": "^7.5.2",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "axios-mock-adapter": "^2.1.0",
     "i18next": "^25.1.2",
     "isbot": "^5.1.17",
     "loglevel": "^1.9.2",
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "dotenv-cli": "^8.0.0",
     "prettier": "^3.5.3",
     "react-router-devtools": "^1.1.0",
     "typescript": "^5.7.2",
