--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development # development, production  
 
-PUBLIC_API_URL=http://localhost:8080 # API URL
-PUBLIC_API_MOCK_MODE=true # API Mock Mode
+VITE_APP_API_URL=http://localhost:8080 # API URL
+VITE_APP_API_MOCK_MODE=true # API Mock Mode
 
 VITE_APP_LOG_LEVEL=debug # debug, info, warn, error
