--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VITE_APP_API_URL=http://localhost:8080 # API URL
 VITE_APP_API_MOCK_MODE=true # API Mock Mode
 
 VITE_APP_LOG_LEVEL=debug # debug, info, warn, error
+
+# env.example에서 .example 삭제해야 함
