--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-devtools": "^1.1.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
