--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "axios": "^1.9.0",
     "axios-mock-adapter": "^2.1.0",
     "i18next": "^25.1.2",
+    "immer": "^10.1.1",
     "isbot": "^5.1.17",
     "loglevel": "^1.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-router": "^7.5.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.2",
