--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,11 @@
   "semi": false,
   "tabWidth": 2,
   "endOfLine": "auto",
-  "trailingComma": "all"
+  "trailingComma": "all",
+  
+  "importOrder": ["^react$","^@?\\w","^@/(.*)$","^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
