--- a/package.json
+++ b/package.json
@@ -30,14 +30,20 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@react-router/dev": "^7.5.2",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
     "prettier": "^3.5.3",
     "react-router-devtools": "^1.1.0",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.32.1",
     "vite": "^5.4.11",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
